# e-register

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  password.txt
apps/: college.cpp  college.h  main.cpp
cmake/: deps.cmake
include/: Group.h  Mark.h  Person.h  Student.h  Stuff.h  Teacher.h  config.h
libs/: CMakeLists.txt
libs/core/include/: Group.h  Mark.h  Person.h  Student.h  Teacher.h  application.h  config.h  group.h  mark.h  person.h  student.h  stuff.h  teacher.h
libs/core/src/: Group.cpp  Person.cpp  Student.cpp  Stuff.cpp  application.cpp  group.cpp  mark.cpp  person.cpp  student.cpp  stuff.cpp  teacher.cpp
libs/ui/include/: menu.h  option.h  ui.h
libs/utils/include/: utils.hpp
libs/utils/src/: utils.cpp
scripts/: excel.cmake
src/: CMakeLists.txt  Group.cpp  Person.cpp  Student.cpp  Stuff.cpp  Teacher.cpp
ui/: CMakeLists.txt  menu.h  option.h  ui.h
utility/: CMakeLists.txt  functions.hpp
utils/: utils.cpp  utils.hpp
